package com.seguros.entities;

public class Cuota {
    
}
