@startuml La tercera seguros

entity Company {
    - nombre: String
    - polizas: List<Poliza>
    + agregarPoliza(poliza: Poliza)
    + eliminarPoliza(poliza: Poliza)
    + getAllPolizas(): List<Poliza>
}

entity Cliente {
    - nombre: String
    - apellido: String
    - documento: Integer
    - mail: String
    - domicilio: String
    - tel: String
    - vehiculos: List<Vehiculo>
}

entity Vehiculo {
    - owner: Cliente
    - marca: Marca
    - color: Color
    - modelo: String
    - anio: int
    - motor: double
    - chasis: String
    - tipo: String
    - dominio: String
}

entity Poliza {
    - vehiculo: Vehiculo
    - cliente: Cliente
    - tipoDeCobertura: TipoDeCobertura
    - nroPoliza: String
    - inicio: Date
    - fin: Date
    - formaDePago: FormaDePago
    - montoTotalAsegurado: double
    - montoMaximoGranizo: double
    - incluyeGranizo: boolean
    + renovarPoliza()
    + cancelarPoliza()
}

entity Cuota {
    - poliza: Poliza
    - nroCuota: int
    - montoTotal: double
    - fechaVencimiento: Date
    - cuotaCancelada: boolean
    - formaDePago: FormaDePago
}

Company "1" --> "0..*" Cliente
Company "1" --> "0..*" Poliza
Vehiculo "1" --> "1" Cliente
Poliza "1" --> "1" Vehiculo
Cliente "1" --> "1..*" Vehiculo
Poliza "1" --> "0..*" Cuota

@enduml